--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		<div class="summary" id="zen-summary" role="article">
 			<p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to load it into this page.</p>
-			<p>Download the example <a href="http://www.csszengarden.com/examples/index" title="This page's source HTML code, not to be modified.">html file</a> and <a href="http://www.csszengarden.com/examples/style.css" title="This page's sample CSS, the file you may modify.">css file</a>. See CSS infographic <a href="/img/infograph.svg" title="This page's infographic.">here</a></p>
+			<p>Download the example <a href="http://www.csszengarden.com/examples/index" title="This page's source HTML code, not to be modified.">html file</a> and <a href="http://www.csszengarden.com/examples/style.css" title="This page's sample CSS, the file you may modify.">css file</a>. See CSS infographic <a href="/img/infograph.png" title="This page's infographic.">here</a></p>
 		</div>
 
 		<div class="preamble" id="zen-preamble" role="article">
